--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -62,6 +62,10 @@
   cursor: pointer;
 }
 .main .result {
-  font-weight: bold;
-  margin-top: 40px;
+  /* font-weight: bold; */
+  margin: 40px 0;
+  /* text-indent: 2rem; */
+  text-align: justify;
+  /* margin: 40px 30%; */
+  /* min-width: 400px; */
 }
